--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                      <div class="about-desc">
                         <h1>Contact</h1>
                      </div>
-                     <p>Please feel welcome to contact me via email at vinaysomawat40@gmail.com. Whether you would like
+                     <p>Please feel welcome to contact me via email at ravindernandal366@gmail.com. Whether you would like
                         to discuss a technology, a business opportunity, or simply say hello, I would be delighted to
                         hear from you.
                      </p>
